platform/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iacgenie-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "iacgenie-backend"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "iacgenie-lsp-route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  rules:
    - host: app.iacgenie.com
      http:
        paths:
          - path: /api/git/webhook/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: iacgenie-backend
                port:
                  number: 80
          - path: /api/v1/pipelines/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: iacgenie-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iacgenie-backend
                port:
                  number: 80
